# window-applets

./: Makefile.am  configure.ac
applets/: configuration.c  configuration.h  plugin.c  plugin.h  preferences.c  preferences.h  watcher.c  watcher.h  widget.c  widget.h
buttons/: Makefile.am  buttons-config.c  buttons-config.h  buttons-plugin.c  buttons-plugin.h  buttons-preferences.c  buttons-preferences.h  buttons-widget.c  buttons-widget.h  windowbuttons.ui
common/: tools.c  tools.h  watcher.c  watcher.h
lxde/: Makefile.am  lxde-windowtitle-main.c
share/: Makefile.am  buttons-preferences.ui  general-preferences.ui  title-preferences.ui
title/: Makefile.am  title-config.c  title-config.h  title-plugin.c  title-plugin.h  title-preferences.c  title-preferences.h  title-preferences.ui  title-widget.c  title-widget.h
xfce/: Makefile.am  applet-xfce4-main.c  xfce4-title-plugin.c  xfce4-title-plugin.h  xfce4-windowapplets-plugin.desktop  xfce4-windowbuttons-plugin.desktop  xfce4-windowtitle-main.c  xfce4-windowtitle-plugin.desktop
