pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = windowbuttons.png

builderdir = $(datadir)/windowbuttons
builder_DATA = buttons-preferences.ui 
		


defaultdir = $(builderdir)/themes/default
default_DATA = themes/default/*.png 

dustdir = ${prefix}/share/windowbuttons/themes/dust
dust_DATA = themes/dust/*.png

humandir = $(builderdir)/themes/human
human_DATA = themes/human/*.png

human_thindir = $(builderdir)/themes/human-thin
human_thin_DATA = themes/human-thin/*.png

dust_sanddir = $(builderdir)/themes/dust-sand
dust_sand_DATA = themes/dust-sand/*.png

blazedir = $(builderdir)/themes/blaze
blaze_DATA = themes/blaze/*.png

blaze_colordir = $(builderdir)/themes/blaze-color
blaze_color_DATA = themes/blaze-color/*.png

antiquedir = $(builderdir)/themes/antique
antique_DATA = themes/antique/*.png

ambiancedir = $(builderdir)/themes/ambiance
ambiance_DATA = themes/ambiance/*.png

dust_invertdir = $(builderdir)/themes/dust-invert
dust_invert_DATA = themes/dust-invert/*.png

elementarydir = $(builderdir)/themes/elementary
elementary_DATA = themes/elementary/*.png

radiancedir = $(builderdir)/themes/radiance
radiance_DATA = themes/radiance/*.png

WoWdir = $(builderdir)/themes/WoW
WoW_DATA = themes/WoW/*.png

ambiance_x_studiodir = $(builderdir)/themes/ambiance-x-studio
ambiance_x_studio_DATA = themes/ambiance-x-studio/*.png

sorbetdir = $(builderdir)/themes/sorbet
sorbet_DATA = themes/sorbet/*.png

ambiance_maverickdir = $(builderdir)/themes/ambiance-maverick
ambiance_maverick_DATA = themes/ambiance-maverick/*.png

radiance_maverickdir = $(builderdir)/themes/radiance-maverick
radiance_maverick_DATA = themes/radiance-maverick/*.png

equinox_glassdir = $(builderdir)/themes/equinox-glass
equinox_glass_DATA = themes/equinox-glass/*.png

planodir = $(builderdir)/themes/plano
plano_DATA = themes/plano/*.png

new_hopedir = $(builderdir)/themes/new-hope
new_hope_DATA = themes/new-hope/*.png

blubuntudir = $(builderdir)/themes/blubuntu
blubuntu_DATA = themes/blubuntu/*.png

