pixmapsdir = ${datadir}/pixmaps
builderdir = ${datadir}/windowapplets
themesdir = ${datadir}/windowapplets/themes

pixmaps_DATA = 
builder_DATA = 

if WIBUTI_WITH_BUTTONS
pixmaps_DATA += windowbuttons.png
builder_DATA += buttons-preferences.ui 
endif

if WIBUTI_WITH_TITLE
pixmaps_DATA += windowtitle.png
builder_DATA += title-preferences.ui 
endif


if WIBUTI_WITH_BUTTONS

defaultdir = ${themesdir}/default
default_DATA = themes/default/*.png 

dustdir = ${themesdir}/dust
dust_DATA = themes/dust/*.png

humandir = ${themesdir}/human
human_DATA = themes/human/*.png

human_thindir = ${themesdir}/human-thin
human_thin_DATA = themes/human-thin/*.png

dust_sanddir = ${themesdir}/dust-sand
dust_sand_DATA = themes/dust-sand/*.png

blazedir = ${themesdir}/blaze
blaze_DATA = themes/blaze/*.png

blaze_colordir = ${themesdir}/blaze-color
blaze_color_DATA = themes/blaze-color/*.png

antiquedir = ${themesdir}/antique
antique_DATA = themes/antique/*.png

ambiancedir = ${themesdir}/ambiance
ambiance_DATA = themes/ambiance/*.png

dust_invertdir = ${themesdir}/dust-invert
dust_invert_DATA = themes/dust-invert/*.png

elementarydir = ${themesdir}/elementary
elementary_DATA = themes/elementary/*.png

radiancedir = ${themesdir}/radiance
radiance_DATA = themes/radiance/*.png

WoWdir = ${themesdir}/WoW
WoW_DATA = themes/WoW/*.png

ambiance_x_studiodir = ${themesdir}/ambiance-x-studio
ambiance_x_studio_DATA = themes/ambiance-x-studio/*.png

sorbetdir = ${themesdir}/sorbet
sorbet_DATA = themes/sorbet/*.png

ambiance_maverickdir = ${themesdir}/ambiance-maverick
ambiance_maverick_DATA = themes/ambiance-maverick/*.png

radiance_maverickdir = ${themesdir}/radiance-maverick
radiance_maverick_DATA = themes/radiance-maverick/*.png

equinox_glassdir = ${themesdir}/equinox-glass
equinox_glass_DATA = themes/equinox-glass/*.png

planodir = ${themesdir}/plano
plano_DATA = themes/plano/*.png

new_hopedir = ${themesdir}/new-hope
new_hope_DATA = themes/new-hope/*.png

blubuntudir = ${themesdir}/blubuntu
blubuntu_DATA = themes/blubuntu/*.png

endif

