builderdir = ${WIBUTI_PATH_CONF}
pixmapsdir = ${datadir}/pixmaps
themesdir = ${WIBUTI_PATH_THEMES}



pixmaps_DATA = 
builder_DATA = general-preferences.ui

if WIBUTI_WITH_BUTTONS_AND_NOT_TITLE
pixmaps_DATA += windowbuttons.png
endif

if WIBUTI_WITH_BUTTONS
builder_DATA += buttons-preferences.ui 
endif

if WIBUTI_WITH_TITLE_AND_NOT_BUTTONS
pixmaps_DATA += windowtitle.png
endif

if WIBUTI_WITH_TITLE
builder_DATA += title-preferences.ui 
endif

if WIBUTI_WITH_BUTTONS_AND_TITLE
pixmaps_DATA += windowapplet.png
endif



if WIBUTI_WITH_BUTTONS

defaultdir = ${themesdir}/default
default_DATA= themes/default/*.png

dustdir = ${themesdir}/Dust
dust_DATA = themes/dust/*.png

humandir = ${themesdir}/Human
human_DATA = themes/human/*.png

human_thindir = ${themesdir}/Human Thin
human_thin_DATA = themes/human-thin/*.png

dust_sanddir = ${themesdir}/Dust Sand
dust_sand_DATA = themes/dust-sand/*.png

blazedir = ${themesdir}/Blaze
blaze_DATA = themes/blaze/*.png

blaze_colordir = ${themesdir}/Blaze Color
blaze_color_DATA = themes/blaze-color/*.png

antiquedir = ${themesdir}/Antique
antique_DATA = themes/antique/*.png

ambiancedir=${themesdir}/Ambiance
ambiance_DATA= themes/ambiance/*.png

dust_invertdir = ${themesdir}/Dust Invert
dust_invert_DATA = themes/dust-invert/*.png

elementarydir = ${themesdir}/Elementary
elementary_DATA = themes/elementary/*.png

radiancedir = ${themesdir}/Radiance
radiance_DATA = themes/radiance/*.png

wowdir = ${themesdir}/WoW
wow_DATA = themes/wow/*.png

ambiance_x_studiodir = ${themesdir}/Ambiance X Studio
ambiance_x_studio_DATA = themes/ambiance-x-studio/*.png

sorbetdir = ${themesdir}/Sorbet
sorbet_DATA = themes/sorbet/*.png

ambiance_maverickdir = ${themesdir}/Ambiance Maverick
ambiance_maverick_DATA = themes/ambiance-maverick/*.png

radiance_maverickdir = ${themesdir}/Radiance Maverick
radiance_maverick_DATA = themes/radiance-maverick/*.png

equinox_glassdir = ${themesdir}/Equinox Glass
equinox_glass_DATA = themes/equinox-glass/*.png

planodir = ${themesdir}/Plano
plano_DATA = themes/plano/*.png

new_hopedir = ${themesdir}/New Hope
new_hope_DATA = themes/new-hope/*.png

blubuntudir = ${themesdir}/Blubuntu
blubuntu_DATA = themes/blubuntu/*.png

persephonadir = ${themesdir}/Persephona
persephona_DATA = themes/persephona/*.png

endif

